--- a/index.html
+++ b/index.html
@@ -272,12 +272,9 @@
     </section>
 
     <!-- Certifications Section -->
-    <section id="certifications">
-        <h2 class="section-header"><i class="fas fa-certificate"></i> Certifications</h2>
-        <div class="education-card">
-            <h3>Certified Java Developer</h3>
-            <p>Issued by Oracle</p>
-        </div>
+   <section id="certificates">
+        <h2 class="section-header"><i class="fas fa-certificate"></i> Certificates</h2>
+        <p>Full Stack Web Development, Data Structures in C++, TechMarton Workshop.</p>
     </section>
 
     <!-- Contact Section -->
