--- a/index.html
+++ b/index.html
@@ -274,7 +274,9 @@
     <!-- Certifications Section -->
    <section id="certificates">
         <h2 class="section-header"><i class="fas fa-certificate"></i> Certificates</h2>
+	   <div class="education-card">
         <p>Full Stack Web Development, Data Structures in C++, TechMarton Workshop.</p>
+	   </div>
     </section>
 
     <!-- Contact Section -->
