--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
    <section id="certificates">
         <h2 class="section-header"><i class="fas fa-certificate"></i> Certificates</h2>
 	   <div class="education-card">
-        <p>Full Stack Web Development, Data Structures in C++, TechMarton Workshop.</p>
+        <p><b>?</b>Full Stack Web Development<br>Data Structures in C++<br> TechMarton Workshop</b></p>
 	   </div>
     </section>
 
