--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Narendra. All rights reserved.</p>
+        <p>Declaration: All information is correct to the best of my knowledge.</p>
+        <p>Yours Sincerely, Posa Narendra</p>
     </footer>
 
 </body>
