--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     <!-- Footer Section -->
     <footer>
         <p>Declaration: All information is correct to the best of my knowledge.</p>
-        <p>Yours Sincerely, Posa Narendra</p>
+        <p>&copy; 2024 Narendra. All rights reserved.</p>
     </footer>
 
 </body>
